--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
       <artifactId>junit-jupiter</artifactId>
       <version>5.8.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.1.2</version>
+    </dependency>
   </dependencies>
 
   <build>
