--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <name>SwagLabsFeudalOverlords</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://www.saucedemo.com/</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
